cc_library(
    name = "flat_hash_set",
    hdrs = ["flat_hash_set.h"],
    deps = [
        "//absl/container:container_memory",
        "//absl/container:hash_function_defaults",
        ":raw_hash_set",
        "//absl/algorithm:container",
        "//absl/base:core_headers",
        "//absl/memory",
    ],
)

cc_test(
    name = "flat_hash_set_test",
    srcs = ["flat_hash_set_test.cc"],
    deps = [
        ":flat_hash_set",
        "//absl/container:hash_generator_testing",
        "//absl/container:unordered_set_constructor_test",
        "//absl/container:unordered_set_lookup_test",
        "//absl/container:unordered_set_members_test",
        "//absl/container:unordered_set_modifiers_test",
        "//absl/base:raw_logging_internal",
        "//absl/memory",
        "//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "raw_hash_set",
    srcs = ["internal/raw_hash_set.cc"],
    hdrs = ["internal/raw_hash_set.h"],
    deps = [
        "//absl/container:common",
        "//absl/container:compressed_tuple",
        "//absl/container:container_memory",
        "//absl/container:hash_policy_traits",
        "//absl/container:hashtable_debug_hooks",
        "//absl/container:hashtablez_sampler",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:dynamic_annotations",
        "//absl/base:endian",
        "//absl/base:prefetch",
        "//absl/base:raw_logging_internal",
        "//absl/hash",
        "//absl/memory",
        "//absl/meta:type_traits",
        "//absl/numeric:bits",
        "//absl/utility",
    ],
)

cc_test(
    name = "raw_graveyard_set_test",
    srcs = ["internal/raw_graveyard_set_test.cc"],
    deps = [
        ":raw_hash_set",
        "@com_google_googletest//:gtest_main",
    ],
)